--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,3 @@
-<header> <em>Welcome to my home page</em> </header> 
+<header> <em>Welcome to my home page</em> 
+<p>This is a test.</p>
+</header> 
