--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,7 @@
-<header> <em>Welcome to my home page</em> 
-This is a test.
-</header> 
+<header> <em>Welcome to my home page</em> </header> 
+   <body><p>This is a test.</p>
+
+ 
 as is this line.
 and this line
+</body> 
