--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,5 @@
-<header> <em>Welcome to my home page</em> </header> 
+<header> <b><em>Welcome to my home page</em></b> 
    <body><p>This is a test.</p>
-
- 
 as is this line.
 and this line
-</body> 
+</body> </header> 
