--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <header> <b><em>Welcome to my home page</em></b> 
    <body><p>This is a test.</p>
-as is this line.
-and this line
+So is this sentence that i wrote.<p>
+and this line beneath it.</p>
 </body> </header> 
