--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
-<header> <b><em>Welcome to my home page</em></b> 
+<header> <title> <b><em>Welcome to my home page</em></b> </title>
    <body><p>This is a test.</p>
-So is this sentence that i wrote.<p>
-and this line beneath it.</p>
+So is this sentence that I wrote.<p>
+And this line beneath it.</p>
 </body> </header> 
