--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<header> <title> <b><em>Welcome to my home page</em></b> </title>
+<header> <h1> <b><em>Welcome to my home page</em></b> </h1>
    <body><p>This is a test.</p>
 So is this sentence that I wrote.<p>
 And this line beneath it.</p>
