--- a/Index.html
+++ b/Index.html
@@ -3,3 +3,11 @@
 So is this sentence that I wrote.<p>
 And this line beneath it.</p>
 </body> </header> 
+
+<body>
+    <h2>Whom am I ? I'm glad you asked.</h2>
+</body>
+
+<footer>
+
+</footer>
