--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@ And this line beneath it.</p>
 
 <body>
     <h2>Whom am I ? I'm glad you asked.</h2>
+    I'm a Front end development student at Noroff School of technology and digital media.
 </body>
 
 <footer>
