--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@ And this line beneath it.</p>
 </body> </header> 
 
 <body>
-    <h2>Whom am I ? I'm glad you asked.</h2>
+    <em>Whom am I ? I'm glad you asked.</em>
     I'm a Front end development student at Noroff School of technology and digital media.
 </body>
 
