--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@ And this line beneath it.</p>
 
 <body>
     <em>Whom am I ? I'm glad you asked.</em>
-    I'm a Front end development student at Noroff School of technology and digital media.
+    <p>I'm a Front end development student at Noroff School of technology and digital media.</p>
 </body>
 
 <footer>
