--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,20 @@
 So is this sentence that I wrote.<p>
 And this line beneath it.</p>
 </body> </header> 
-
 <body>
     <em>Whom am I ? I'm glad you asked.</em>
     <p>I'm a Front end development student at Noroff School of technology and digital media.</p>
 </body>
+<style>
+    footer {
+        text-align: center;
+        padding: 5px;
+        background-color: orangered;
+        color: black;
+    }
+</style>
 
 <footer>
-
+    <p>Author: Frederik Rustad</p>
+    <p><a href="Frerus50251@stud.noroff.no">Frerus50251@stud.noroff.no</a></p>
 </footer>
