--- a/Index.html
+++ b/Index.html
@@ -18,5 +18,6 @@ And this line beneath it.</p>
 
 <footer>
     <p>Author: Frederik Rustad</p>
+    <p> <small>Copyright Frederik Rustad 2022</small> </p>
     <p><a href="Frerus50251@stud.noroff.no">Frerus50251@stud.noroff.no</a></p>
 </footer>
