--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,14 @@
-<header> <h1> <b><em>Welcome to my home page</em></b> </h1>
+<style>
+    header {
+        text-align: center;
+        padding: 20px;
+    }
+</style>
+<header> <h1> <b><em>Welcome to my home page</em></b> </h1></header> 
    <body><p>This is a test.</p>
 So is this sentence that I wrote.<p>
 And this line beneath it.</p>
-</body> </header> 
+</body> 
 <body>
     <em>Whom am I ? I'm glad you asked.</em>
     <p>I'm a Front end development student at Noroff School of technology and digital media.</p>
