--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,11 @@
     header {
         text-align: center;
         padding: 20px;
+        font-family: Outfit;
+    
     }
 </style>
-<header> <h1> <b><em>Welcome to my home page</em></b> </h1></header> 
+<header> <h1> <b><em>Welcome to my home page !</em></b> </h1></header> 
    <body><p>This is a test.</p>
 So is this sentence that I wrote.<p>
 And this line beneath it.</p>
