--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
     header {
         text-align: center;
         padding: 20px;
-        font-family: Outfit;
+        font-family: Georgia, 'Times New Roman', Times, serif;
     
     }
 </style>
