--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@ And this line beneath it.</p>
 </body>
 <style>
     footer {
+        align-content: bottom;
         text-align: center;
         padding: 5px;
         background-color: orangered;
