--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@ And this line beneath it.</p>
 </body>
 <style>
     footer {
-        place-content: bottom;
+        bottom: 0;
         text-align: center;
         padding: 5px;
         background-color: orangered;
