--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@ And this line beneath it.</p>
 </body>
 <style>
     footer {
+        position: absolute;
         bottom: 0;
         text-align: center;
         padding: 5px;
