--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@ And this line beneath it.</p>
     footer {
         position: absolute;
         bottom: 0;
+        width: 100%;
         text-align: center;
         padding: 5px;
         background-color: orangered;
