--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,7 @@
 <style>
     header {
+        position: absolute;
+        top: 0;
         text-align: center;
         padding: 20px;
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -22,8 +24,8 @@ And this line beneath it.</p>
         width: 100%;
         text-align: center;
         padding: 5px;
-        background-color: orangered;
-        color: black;
+        background-color: black;
+        color: white;
     }
 </style>
 
