--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,20 @@
 <style>
-    header {
-        
+    header {    
         text-align: center;
         padding: 20px;
         font-family: Georgia, 'Times New Roman', Times, serif;
-    
-    }
+        }
 </style>
 <header> <h1> <b><em>Welcome to my home page !</em></b> </h1></header> 
-
-   <body><p>This is a test.</p>
-So is this sentence that I wrote.<p>
-And this line beneath it.</p>
-</body> 
+   <article>
+    <time><small>30,11,2022</small></time>
+    <p><h4>This is a test.</h4>
+So is this sentence that I wrote.</p> 
+<p>And this one beneath it. </p> 
 <body>
-    <em>Whom am I ? I'm glad you asked.</em>
+    <h4>Whom am I ? I'm glad you asked.</h4>
     <p>I'm a Front end development student at Noroff School of technology and digital media.</p>
-</body>
+</article>
 <style>
     footer {
         position: absolute;
@@ -28,7 +26,6 @@ And this line beneath it.</p>
         color: white;
     }
 </style>
-
 <footer>
     <p>Author: Frederik Rustad</p>
     <p> <small>Copyright Frederik Rustad 2022</small> </p>
