--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,8 @@
         text-align: center;
         padding: 20px;
         font-family: Georgia, 'Times New Roman', Times, serif;
+        background-color: black;
+        color: white;
         }
 </style>
 <header> <h1> <b><em>Welcome to my home page !</em></b> </h1></header> 
@@ -11,6 +13,11 @@
     <p><h4>This is a test.</h4>
 So is this sentence that I wrote.</p> 
 <p>And this one beneath it. </p> 
+<style>
+    body{
+       background-color: blanchedalmond;
+    }
+</style>
 <body>
     <h4>Whom am I ? I'm glad you asked.</h4>
     <p>I'm a Front end development student at Noroff School of technology and digital media.</p>
